# Customer-Service-Agent--CrewAI

./: README.md
customer_agent/: README.md  feedback.csv  pyproject.toml  report.md  result.json  update_result.json
customer_agent/knowledge/: policy_service_requests.csv
customer_agent/src/customer_agent/: crew.py  main.py
customer_agent/src/customer_agent/config/: agents.yaml  tasks.yaml
customer_agent/src/customer_agent/tools/: custom_tool.py
customer_agent/tests/: write.py
