[project]
name = "customer_agent"
version = "0.1.0"
description = "customer_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
customer_agent = "customer_agent.main:run"
run_crew = "customer_agent.main:run"
train = "customer_agent.main:train"
replay = "customer_agent.main:replay"
test = "customer_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
